--- a/tarea_6_00353715.md
+++ b/tarea_6_00353715.md
@@ -1,1 +1,13 @@
-<h1> Ensayo ¿Ahora que? 
+# Ensayo ¿Ahora que?
+
+Mi tema de mas agrado fue el manejo de memoria y como se puede llegar a tener un control tan preciso al usarlo correctamente. Asi como tambien ese control puede ser manipulado de varias formas como por ejemplo al usar los registros con la memoria del sistema en `mov [300h],09h` y despues unirlo con la memoria de registro para hacer una operacion rapida `mov al,[300h]`.
+
+Ya con esto de los juegos que mas me gustan a mi son los de simulacion y siempre me ha gustado como llegan a optimizar los sistemas de tal forma que aunque hayan tantas cosas siendo calculadas cada segundo; la jugabilidad no se ve afectada por eso. Por ejemplo en un juego llamado Stellaris que permite a uno crear una galaxia y manejar su imperio tenemos desde generadores de recursos por planeta a otros que son estaciones mineras y las flotas y eso no se puede manejar en un hilo solamente pero uno a lo largo de la campaña puede observar que la jugabilidad no es afectada al añadir nuevas variables o al pedirle que el juego valla mas rapido.
+
+Y esto puede ser realmente observado en programas que aveces son creados sin un enfoque a la eficiencia del mismo que esto puede ser obtenido de muchas maneras como al usar un algoritmo mas rapido o al crear las variables con un tamaño adecuado que permita al procesador hacer el calculo mas rapido con ella o tambien al manejar el flujo del programa que tambien eso puede afectar como uno sienta una aplicacion por ejemplo al tener muchos `Whiles` uno genera un tiempo de procesamiento mas alto ya que tiene que leer cada celda de memoria normalmente pero eso normalmente si uno se toma su tiempo puede llegarlo a hacerse un `While` con un `for` o otra funcion que agilice el proceso y al verlo de la forma en Ensamblador uno tiene un control super preciso de eso ya que nos aseguramos de definir hasta cuantas veces queremos algo y de que tamaño.
+
+Retomando el tema de los juegos de `Simulacion` siempre esta eso de como optimizarlo como permitir al jugador llevar la velocidad del juego a `3x` sin tener una falla visual o lag por la mala optimizacion y como los productores de ellos siempre estan buscando formas de innovar en esas areas para poder crear la mejor experiencia y eso hasta ahora me doy cuenta que es porque se tiene que tener un gran conocimiento de estructuras de datos ademas del manejo correcto de los sistemas del procesador asi como tambien saber en que momento usar una matriz o no y porque o si tambien es mejor mantener algo siempre en memoria o si solo en situaciones especiales es necesario cargarlo para asi tener la ram libre.
+
+Cositas como esas fueron lo que realmente me llevaron a que me gustara esta materia porque si puede ser tedioso escribir en este lenguaje pero eso me ha hecho pensar en maneras de como hacer las cosas en menos paso o ver algo que antes lo veia bien a no tan bien porque puede funcionar con menos recursos o agilizarse con la correcta utilizacion de los comandos del lenguaje.
+
+En conclusion para mi ha sido una experiencia gratificante el poder ver algo mas afondo acerca del manejo de una computadora y como esta tiene tantos campos en lo que uno si se toma su tiempo puede llegar a lograr un resultado mucho mejor al inicial, al tener la energia de crear algo mejor, algo que el usuario no sienta la diferencia entre una computadora con las ultimas especificaciones que con una de 3 años atras obsoleta y con un sistema mas lento. Y asi poder decir que mi aplicacion corre igual de bien en una maquina obsoleta y una de ultimo modelo, yo como programador aunque el usuario final no vea eso seria de mi agrado saber que mi programa ha llegado a ser lo mismo para multiples plataformas y igual de rapido en todas.
